objects/tspa__TechSee_Account_Creation__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tspa__ACS_URL_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACS URL Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__AccountActivationEndpoint__c</fullName>
        <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&apos;&apos;)) ,
&apos;https://&apos;+
IF(ISPICKVAL( tspa__Region1__c ,&apos;AWS Europe&apos;), tspa__baseURL__c, tspa__baseURL_US__c ) +&apos;/public/accounts/approve&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountActivationEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountCancelEndpoint__c</fullName>
        <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&apos;&apos;)) ,
&apos;https://&apos;+
IF(ISPICKVAL( tspa__Region1__c ,&apos;AWS Europe&apos;), tspa__baseURL__c, tspa__baseURL_US__c ) +&apos;/public/accounts/cancel&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCancelEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountCreatedSuccess__c</fullName>
        <label>AccountCreatedSuccess</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountId__c</fullName>
        <label>AccountId</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountPrerequisite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountPrerequisite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__AccountRegisterSuccess__c</fullName>
        <label>AccountRegisterSuccess</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountRegistrationEndpoint__c</fullName>
        <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&apos;&apos;)) ,
&apos;https://&apos;+  
IF(ISPICKVAL( tspa__Region1__c ,&apos;AWS Europe&apos;), tspa__baseURL__c,  tspa__baseURL_US__c )   +&apos;/public/accounts&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountRegistrationEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountRetryEndpoint__c</fullName>
        <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&apos;&apos;)) ,
&apos;https://&apos;+
IF(ISPICKVAL( tspa__Region1__c ,&apos;AWS Europe&apos;), tspa__baseURL__c, tspa__baseURL_US__c ) +&apos;/public/accounts/retryActivation&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountRetryEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountRevokeEndpoint__c</fullName>
        <formula>IF(NOT(ISPICKVAL( tspa__Region1__c ,&apos;&apos;)) ,
&apos;https://&apos;+
IF(ISPICKVAL( tspa__Region1__c ,&apos;AWS Europe&apos;), tspa__baseURL__c, tspa__baseURL_US__c ) +&apos;/public/accounts/revoke&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountRevokeEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AccountStatus__c</fullName>
        <label>AccountStatus</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Account_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Activation_Retry_Attempts__c</fullName>
        <label>Activation Retry  Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__CSP_Trusted_Sites_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSP Trusted Sites Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Connected_App_Policies_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected App - Policies Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Connected_App_Profiles_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected App - Profiles Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Custom_Attributes_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Attributes Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__EmailMessage__c</fullName>
        <label>EmailMessage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tspa__EmailSubject__c</fullName>
        <label>EmailSubject</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tspa__ExperienceCloudDomain__c</fullName>
        <label>Experience Cloud Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Flow_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__GettingStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GettingStarted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Identity_Provider_is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identity Provider is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>nl-nl</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>en-us</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr-fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de-de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>he-il</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>it-it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>pt-pt</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es-es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>sv-se</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>pl-pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>jp-jp</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>tr-tr</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>el-gr</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>ru-ru</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>sk-sk</fullName>
                    <label>Slovak</label>
                </value>
                <value>
                    <fullName>th-th</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>hu-hu</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>ko-KR</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>ko_KR</fullName>
                    <isActive>false</isActive>
                    <label>ko_KR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Live_Agent_Message_Template__c</fullName>
        <label>Live AgentMessageTemplate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Metadata_Discovery_Endpoint__c</fullName>
        <label>Metadata Discovery Endpoint</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Multi_Language__c</fullName>
        <label>Multi Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__OfflineTokenEU__c</fullName>
        <label>OfflineTokenEU</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>tspa__OfflineTokenUS__c</fullName>
        <label>OfflineTokenUS</label>
        <length>174</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>tspa__Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Package_Upgrade_Status__c</fullName>
        <label>Package Upgrade Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Platform_Events_Usage_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platform Events Usage Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__PolicyLabel__c</fullName>
        <label>PolicyLabel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__PolicyURL__c</fullName>
        <label>PolicyURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__PrerequisitePostActivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PrerequisitePostActivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Region1__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS Europe</fullName>
                </value>
                <value>
                    <fullName>AWS North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Remote_Site_Settings_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Site Settings Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__SAML_URL_Copied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAML URL Copied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Salesforce_Object_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Object Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Single_Logout_Endpoint__c</fullName>
        <label>Single Logout Endpoint</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SmsMessage__c</fullName>
        <label>SmsMessage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tspa__Source_Organization_Id__c</fullName>
        <label>Source Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__StoreConfigurationCategory__c</fullName>
        <label>StoreConfigurationCategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>american</fullName>
                    <label>USA &amp; Canada App Store user</label>
                </value>
                <value>
                    <fullName>european</fullName>
                    <label>Non USA &amp; Canada App Store user</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__TNCMessage__c</fullName>
        <label>TNCMessage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tspa__Template_Version__c</fullName>
        <label>Template Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__TermsLabel__c</fullName>
        <label>TermsLabel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__TermsURL__c</fullName>
        <label>TermsURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Token1__c</fullName>
        <label>Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>tspa__Token_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Token__c</fullName>
        <label>Token</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Update_My_Domain_Response__c</fullName>
        <label>Update My Domain Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__UserCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UserCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__VJ_CSP_Trusted_Sites_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VJ CSP Trusted Sites Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__VideoComponentAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VideoComponentAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__baseURL_US__c</fullName>
        <label>baseURL_US</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__baseURL__c</fullName>
        <label>baseURL_EU</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__subDomain__c</fullName>
        <label>subDomain</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__useDomainZoneSuffix__c</fullName>
        <defaultValue>&apos;false&apos;</defaultValue>
        <label>useDomainZoneSuffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant - Account Detail</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visual Account Creation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - Account Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>